--- a/SerialPortPrint.Android/SerialPortPrint.Android.csproj
+++ b/SerialPortPrint.Android/SerialPortPrint.Android.csproj
@@ -22,7 +22,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;ANDROID</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -39,13 +39,23 @@
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="..\SerialPortPrint\Log.cs">
+      <Link>Log.cs</Link>
+    </Compile>
+    <Compile Include="..\SerialPortPrint\Pos.cs">
+      <Link>Pos.cs</Link>
+    </Compile>
+    <Compile Include="..\SerialPortPrint\PrintQueue.cs">
+      <Link>PrintQueue.cs</Link>
+    </Compile>
+    <Compile Include="..\SerialPortPrint\PrintState.cs">
+      <Link>PrintState.cs</Link>
+    </Compile>
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StopBits.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
