--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -55,15 +55,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activity1.cs" />
+    <Compile Include="DeviceManager.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
+    <AndroidResource Include="Resources\Layout\BluetoothSetting.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\Layout\Main.axml" />
+    <AndroidResource Include="Resources\Layout\Main.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\Values\Strings.xml" />
@@ -72,12 +78,15 @@
     <AndroidResource Include="Resources\Drawable\Icon.png" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\qq.png" />
+    <AndroidAsset Include="Assets\qq2.jpg" />
+    <AndroidAsset Include="Assets\T.png" />
     <Content Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SerialPortPrint.Android\SerialPortPrint.Android.csproj">
+    <ProjectReference Include="..\SerialPortPrint.Android\BluetoothPrint.Android.csproj">
       <Project>{a5317c6e-726a-418a-b175-cd559dc17fc6}</Project>
-      <Name>SerialPortPrint.Android</Name>
+      <Name>BluetoothPrint.Android</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
