--- a/SerialPortPrintTest/App.config
+++ b/SerialPortPrintTest/App.config
@@ -1,6 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
+  <appSettings>
+    <add key="port" value="COM4"/>
+  </appSettings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
 </configuration>
